<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#4CAF50"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="52dp"
        android:text="*"
        android:textColor="#F30505"
        app:layout_constraintStart_toEndOf="@+id/employeeName"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="*"
        android:textColor="#F30505"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:text="*"
        android:textColor="#F30505"
        app:layout_constraintStart_toEndOf="@+id/sectionItem"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <EditText
        android:id="@+id/IDholder"
        android:layout_width="258dp"
        android:layout_height="45dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/hint_id"
        android:inputType="text"
        android:textSize="40px"
        app:layout_constraintStart_toEndOf="@+id/employeeID"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:text="@string/employee_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sectionHolder" />

    <TextView
        android:id="@+id/sectionHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="47dp"
        android:text="@string/employee_sec"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/employeeName" />

    <EditText
        android:id="@+id/secondName"
        android:layout_width="126dp"
        android:layout_height="46dp"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:hint="@string/hint_lastname"
        android:inputType="text"
        android:textSize="40px"
        app:layout_constraintStart_toEndOf="@+id/firstName"
        app:layout_constraintTop_toBottomOf="@+id/IDholder" />

    <TextView
        android:id="@+id/employeeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:text="@string/employee_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/employeeID" />

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/employeeID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="38dp"
        android:text="@string/employee_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="text"
        android:textSize="40px"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/sectionItem" />

    <Spinner
        android:id="@+id/sectionItem"
        android:layout_width="200dp"
        android:layout_height="22dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:entries="@array/spinner_items"
        android:textSize="30px"
        app:layout_constraintStart_toEndOf="@+id/sectionHolder"
        app:layout_constraintTop_toBottomOf="@+id/secondName" />

    <Button
        android:id="@+id/submitbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#009688"
        android:text="@string/submit_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="126dp"
        android:layout_height="46dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:hint="@string/hint_firstname"
        android:inputType="text"
        android:textSize="40px"
        app:layout_constraintStart_toEndOf="@+id/employeeName"
        app:layout_constraintTop_toBottomOf="@+id/IDholder" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="328dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText">

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_weight="0"
            android:text="@string/employee_gender" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="*"
            android:textColor="#F80505" />

        <RadioButton
            android:id="@+id/mensItem"
            android:layout_width="86dp"
            android:layout_height="36dp"
            android:layout_marginLeft="58dp"
            android:text="@string/employee_boy"
            android:textSize="40px" />

        <RadioButton
            android:id="@+id/girlItem"
            android:layout_width="86dp"
            android:layout_height="match_parent"
            android:text="@string/employee_girl"
            android:textSize="40px" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="95dp"
        android:text="*"
        android:textColor="#F30505"
        app:layout_constraintStart_toEndOf="@+id/employeeID"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="*"
        android:textColor="#ED0707"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/mustItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/must_item"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />


</androidx.constraintlayout.widget.ConstraintLayout>