<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#4CAF50"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/detail_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="356dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:isScrollContainer="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:id="@+id/LinearLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="292dp">

                <TextView
                    android:id="@+id/detail_employee_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="16dp"
                    android:text="ID:"
                    app:layout_constraintStart_toEndOf="@+id/employeeID"
                    app:layout_constraintTop_toBottomOf="@+id/toolbar" />

                <TextView
                    android:id="@+id/employeeID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="52dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/employee_id"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/toolbar" />

                <TextView
                    android:id="@+id/employeeName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="52dp"
                    android:layout_marginTop="36dp"
                    android:text="@string/employee_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/employeeID" />


                <TextView
                    android:id="@+id/detail_first_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="40dp"
                    android:text="First Name:"
                    app:layout_constraintStart_toEndOf="@+id/employeeName"
                    app:layout_constraintTop_toBottomOf="@+id/detail_employee_id" />


                <TextView
                    android:id="@+id/detail_second_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="40dp"
                    android:text="Second Name:"
                    app:layout_constraintStart_toEndOf="@+id/detail_first_name"
                    app:layout_constraintTop_toBottomOf="@+id/detail_employee_id" />

                <TextView
                    android:id="@+id/sectionHolder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="52dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/employee_sec"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/employeeName" />

                <TextView
                    android:id="@+id/detail_section"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="40dp"
                    android:text="Section:"
                    app:layout_constraintStart_toEndOf="@+id/sectionHolder"
                    app:layout_constraintTop_toBottomOf="@+id/detail_first_name" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="52dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/employee_email"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sectionHolder" />

                <TextView
                    android:id="@+id/detail_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="40dp"
                    android:text="Email:"
                    app:layout_constraintStart_toEndOf="@+id/textView5"
                    app:layout_constraintTop_toBottomOf="@+id/detail_section" />

                <TextView
                    android:id="@+id/gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="52dp"
                    android:layout_marginTop="40dp"
                    android:layout_weight="0"
                    android:text="@string/employee_gender"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

                <TextView
                    android:id="@+id/detail_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="90dp"
                    android:layout_marginTop="40dp"
                    android:text="Gender:"
                    app:layout_constraintStart_toEndOf="@+id/gender"
                    app:layout_constraintTop_toBottomOf="@+id/detail_email" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
